plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: '3.1.5'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.2.0'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
	testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '6.2.1'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.2.0'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.2.0'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '3.2.0'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation group: 'org.springframework.security', name: 'spring-security-config', version: '6.2.0'
//	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
//	implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
	implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
	annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
	implementation "org.mapstruct:mapstruct-processor:1.3.1.Final"
	implementation "org.mapstruct:mapstruct:1.3.1.Final"
}

tasks.named('test') {
	useJUnitPlatform()
}
